--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.16.2",
     "vue": "^2.3.3",
     "vue-axios": "^2.0.2",
+    "vue-carousel": "^0.6.4",
     "vue-material": "^0.7.4",
     "vue-router": "^2.3.1"
   },
